--- a/.oh-my-zsh/.github/workflows/installer.yml
+++ b/.oh-my-zsh/.github/workflows/installer.yml
@@ -3,9 +3,9 @@ on:
   workflow_dispatch: {}
   push:
     paths:
-      - tools/install.sh
-      - .github/workflows/installer
-      - .github/workflows/installer.yml
+      - 'tools/install.sh'
+      - '.github/workflows/installer/**'
+      - '.github/workflows/installer.yml'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -51,5 +51,4 @@ jobs:
         run: |
           cp tools/install.sh .github/workflows/installer/install.sh
           cd .github/workflows/installer
-          vc link --yes -t ${{ secrets.VERCEL_TOKEN }}
           vc deploy --prod -t ${{ secrets.VERCEL_TOKEN }}
