updated kitty, nerd fonts

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "discord-theme"]
 	path = discord-theme
 	url = https://github.com/catppuccin/discord.git
+[submodule "fonts/nerd-fonts"]
+	path = fonts/nerd-fonts
+	url = git@github.com:ryanoasis/nerd-fonts.git
