--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -24,7 +24,7 @@ font_family      GoMono Nerd Font
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 20.0
+font_size 16.0
 
 #: Font size (in pts)
 
@@ -2393,7 +2393,7 @@ font_size 20.0
 
 # BEGIN_KITTY_THEME
 # Catppuccin Kitty Mocha
-include current-theme.conf
+# include current-theme.conf
 # END_KITTY_THEME
 #
 # BEGIN_TAB_BAR
