--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Lilex Nerd Font, Extralight
+font_family      Lilex Nerd Font Mono
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
@@ -1120,7 +1120,12 @@ font_size 10.0
 
 #: Path to a background image. Must be in PNG format.
 
+# background_image "~/dotfiles/Wallpapers/terminal background.png"
+background_image "../Wallpapers/terminal background.png"
+
 # background_image_layout tiled
+
+background_image_layout tiled
 
 #: Whether to tile, scale or clamp the background image. The value can
 #: be one of tiled, mirror-tiled, scaled, clamped, centered or
@@ -1133,6 +1138,7 @@ font_size 10.0
 #: should be used.
 
 # dynamic_background_opacity no
+dynamic_background_opacity yes
 
 #: Allow changing of the background_opacity dynamically, using either
 #: keyboard shortcuts (increase_background_opacity and
@@ -1140,6 +1146,7 @@ font_size 10.0
 #: Changing this option by reloading the config is not supported.
 
 # background_tint 0.0
+background_tint 20.0
 
 #: How much to tint the background image by the background color. This
 #: option makes it easier to read the text. Tinting is done using the
