nvim setup + yabai stuff + kitty mods

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -24,7 +24,7 @@ font_family      Lilex Nerd Font Mono
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 10.0
+font_size 20.0
 
 #: Font size (in pts)
 
@@ -1081,6 +1081,7 @@ font_size 10.0
 #: The foreground and background colors.
 
 # background_opacity 0.24
+background_opacity 0.65
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -1104,7 +1105,7 @@ font_size 10.0
 #: this option when reloading the config will only work if
 #: dynamic_background_opacity was enabled in the original config.
 
-# background_blur 0
+background_blur 20
 
 #: Set to a positive value to enable background blur (blurring of the
 #: visuals behind a transparent window) on platforms that support it.
@@ -1121,6 +1122,7 @@ font_size 10.0
 #: Path to a background image. Must be in PNG format.
 
 # background_image "~/dotfiles/Wallpapers/terminal background.png"
+# background_image "/Users/myrrh/dotfiles/Wallpapers/terminal background.png"
 background_image "../Wallpapers/terminal background.png"
 
 # background_image_layout tiled
@@ -1138,7 +1140,7 @@ background_image_layout tiled
 #: should be used.
 
 # dynamic_background_opacity no
-dynamic_background_opacity yes
+# dynamic_background_opacity yes
 
 #: Allow changing of the background_opacity dynamically, using either
 #: keyboard shortcuts (increase_background_opacity and
