--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1080,8 +1080,9 @@ font_size 20.0
 
 #: The foreground and background colors.
 
-# background_opacity 0.24
-background_opacity 0.65
+# background_opacity 0.1
+# background_opacity 0.65
+background_opacity 1
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -1105,7 +1106,7 @@ background_opacity 0.65
 #: this option when reloading the config will only work if
 #: dynamic_background_opacity was enabled in the original config.
 
-background_blur 20
+background_blur 64
 
 #: Set to a positive value to enable background blur (blurring of the
 #: visuals behind a transparent window) on platforms that support it.
@@ -1121,13 +1122,11 @@ background_blur 20
 
 #: Path to a background image. Must be in PNG format.
 
-# background_image "~/dotfiles/Wallpapers/terminal background.png"
-# background_image "/Users/myrrh/dotfiles/Wallpapers/terminal background.png"
-background_image "../Wallpapers/terminal background.png"
+background_image /Users/myrrh/dotfiles/Wallpapers/kitty_background.png
 
 # background_image_layout tiled
 
-background_image_layout tiled
+background_image_layout cscaled
 
 #: Whether to tile, scale or clamp the background image. The value can
 #: be one of tiled, mirror-tiled, scaled, clamped, centered or
@@ -1148,7 +1147,7 @@ background_image_layout tiled
 #: Changing this option by reloading the config is not supported.
 
 # background_tint 0.0
-background_tint 20.0
+background_tint 0.9
 
 #: How much to tint the background image by the background color. This
 #: option makes it easier to read the text. Tinting is done using the
@@ -1156,7 +1155,7 @@ background_tint 20.0
 #: if background_opacity is set and transparent windows are supported
 #: or background_image is set.
 
-# background_tint_gaps 1.0
+background_tint_gaps 1.0
 
 #: How much to tint the background image at the window gaps by the
 #: background color, after applying background_tint. Since this is
