new linux stuff

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -24,7 +24,7 @@ font_family      Lilex Nerd Font Mono
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 20.0
+font_size 10.0
 
 #: Font size (in pts)
 
@@ -1121,9 +1121,7 @@ background_blur 20
 
 #: Path to a background image. Must be in PNG format.
 
-# background_image "~/dotfiles/Wallpapers/terminal background.png"
-# background_image "/Users/myrrh/dotfiles/Wallpapers/terminal background.png"
-background_image "../Wallpapers/terminal background.png"
+background_image "/home/myrrh/dotfiles/Wallpapers/terminal background.png" 
 
 # background_image_layout tiled
 
